Added ModelView on Front Panel

--- a/WpfDesignSuperDuper/MainWindow.xaml
+++ b/WpfDesignSuperDuper/MainWindow.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfDesignSuperDuper"
+        xmlns:local="clr-namespace:WpfDesignSuperDuper"        
+        xmlns:viewModel ="clr-namespace:WpfDesignSuperDuper.MVVM.ViewModel"
         mc:Ignorable="d"
         Title="MainWindow" 
         Height="600" 
@@ -12,7 +13,11 @@
         ResizeMode="NoResize"
         Background="Transparent"
         AllowsTransparency="True">
-
+    
+    <Window.DataContext>
+        <viewModel:MainViewModel/>
+    </Window.DataContext>
+    
     <Border Background="#272535"
             CornerRadius="20">
         <Grid>
@@ -60,18 +65,10 @@
                 Style="{StaticResource ModernTextBox}">
 
             </TextBox>
-            <TextBlock 
-                Grid.Column="1"
-                Grid.Row="1"
-                VerticalAlignment="Center"
-                HorizontalAlignment="Center"
-                Text="https://www.youtube.com/watch?v=PzP8mw7JUzI"
-                FontSize="25"
-                Foreground="White"/>
             <ContentControl Grid.Row="1"
                             Grid.Column="1"
-                            Margin="10">
-                
+                            Margin="10"
+                            Content="{Binding CurrentView}">
             </ContentControl>
         </Grid>
     </Border>
