--- a/WpfDesignSuperDuper/MVVM/View/HomeView.xaml
+++ b/WpfDesignSuperDuper/MVVM/View/HomeView.xaml
@@ -5,14 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfDesignSuperDuper.MVVM.View"
              mc:Ignorable="d" 
-             d:DesignHeight="550" d:DesignWidth="645">
+             d:DesignHeight="480" d:DesignWidth="650">
     <StackPanel>
         <TextBlock Text="Discover"
                    Foreground="White"
                    FontSize="28"
                    HorizontalAlignment="Left"
                    Margin="0,0,0,20"/>
-        <StackPanel Orientation="Horizontal">
+        <StackPanel Orientation="Horizontal"
+                    Margin="0,0,0,10">
             <Border Width="400"
                     Height="200">
                 <Border.Background>
@@ -66,74 +67,47 @@
                 </Border.Clip>
             </Border>
         </StackPanel>
-        <TextBlock Text="MostWatched"
+        <StackPanel>
+            <TextBlock Text="MostWatched"
                    Foreground="White"
                    FontSize="24"
                    HorizontalAlignment="Left"
                    Margin="0,0,0,20"/>
-        <StackPanel Orientation="Horizontal">
-            <Border Width="150"
-                    Height="150">
-                <Border.Background>
-                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,0">
-                        <GradientStop Color="#8650fa" Offset="0"/>
-                        <GradientStop Color="#8634fa" Offset="0"/>
-                    </LinearGradientBrush>
-                </Border.Background>
-                <Border.Clip>
-                    <RectangleGeometry RadiusX="10" 
-                                       RadiusY="10"
-                                       Rect="0,0,150,150"/>
-                </Border.Clip>
-            </Border>
 
-            <Border Width="150"
-                    Height="150"
-                    Margin="15,0,0,0">
-                <Border.Background>
-                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,0">
-                        <GradientStop Color="#8650fa" Offset="0"/>
-                        <GradientStop Color="#8634fa" Offset="0"/>
-                    </LinearGradientBrush>
-                </Border.Background>
-                <Border.Clip>
-                    <RectangleGeometry RadiusX="10" 
-                                       RadiusY="10"
-                                       Rect="0,0,150,150"/>
-                </Border.Clip>
-            </Border>
+            <StackPanel Orientation="Horizontal">
+                <StackPanel.Resources>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="Margin" Value="10,0,0,0"/>
+                    </Style>
+                </StackPanel.Resources>
 
-            <Border Width="150"
-                    Height="150"
-                    Margin="15,0,0,0">
-                <Border.Background>
-                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,0">
-                        <GradientStop Color="#8650fa" Offset="0"/>
-                        <GradientStop Color="#8634fa" Offset="0"/>
-                    </LinearGradientBrush>
-                </Border.Background>
-                <Border.Clip>
-                    <RectangleGeometry RadiusX="10" 
-                                       RadiusY="10"
-                                       Rect="0,0,150,150"/>
-                </Border.Clip>
-            </Border>
 
-            <Border Width="150"
+
+                <Border Width="150"
                     Height="150"
-                    Margin="15,0,0,0">
-                <Border.Background>
-                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,0">
-                        <GradientStop Color="#8650fa" Offset="0"/>
-                        <GradientStop Color="#8634fa" Offset="0"/>
-                    </LinearGradientBrush>
-                </Border.Background>
-                <Border.Clip>
-                    <RectangleGeometry RadiusX="10" 
-                                       RadiusY="10"
-                                       Rect="0,0,150,150"/>
-                </Border.Clip>
-            </Border>
+                    CornerRadius="10"
+                    Background="#844eff">
+                </Border>
+
+                <Border Width="150"
+                    Height="150"
+                    CornerRadius="10"
+                    Background="#4e99ff">
+                </Border>
+
+                <Border Width="150"
+                    Height="150"
+                    CornerRadius="10"
+                    Background="#4eff91">
+                </Border>
+
+                <Border Width="150"
+                    Height="150"
+                    CornerRadius="10"
+                    Background="#ecff4e">
+                </Border>
+            </StackPanel>
+            
         </StackPanel>
     </StackPanel>
 </UserControl>
