Added a new View and Switching between views

--- a/WpfDesignSuperDuper/App.xaml
+++ b/WpfDesignSuperDuper/App.xaml
@@ -15,7 +15,11 @@
             <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
                 <view:HomeView/>
             </DataTemplate>
-            
+
+            <DataTemplate DataType="{x:Type viewModel:DiscoveryViewModel}">
+                <view:DiscoveryView/>
+            </DataTemplate>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
