--- a/WpfDesignSuperDuper/Theme/MenuButtonTheme.xaml
+++ b/WpfDesignSuperDuper/Theme/MenuButtonTheme.xaml
@@ -11,7 +11,8 @@
                               HorizontalAlignment="Stretch"
                               Background="{TemplateBinding Background}">
                             <TextBlock Text="{TemplateBinding Content}"
-                                       VerticalAlignment="Center"/>
+                                       VerticalAlignment="Center"
+                                       Margin="50,0,0,0"/>
 
                         </Grid>
                     </ControlTemplate>
@@ -19,7 +20,7 @@
             </Setter>
 
             <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="Margin" Value="50,0,0,0"/>
+            <Setter Property="Padding" Value="50,0,0,0"/>
             <Setter Property="BorderThickness" Value="0"/>
         </Style.Setters>
         <Style.Triggers>
